test/integration/good/tuples/tuple-constraints.stan
data {
  (int<lower=0>, real<lower=1>) y;
  //(int<lower=0>, real<lower=1>, simplex[2]) x;
}
