test/integration/bad/missing_dist_suffix/lpmf_lpdf_replacement2.stan
data { 
}
model {  
    // known family, known suffix, not implemented  
    target += normal_lpmf(1|0,1);
}
